fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      padding: 110px 10% 450px 0;
+      padding: 110px 10% 600px 0;
       color: white;
       transition: ease all .5s;
       font-size: 2.5rem;
@@ -124,7 +124,7 @@
       width: 100%;
       /* border: 1px solid red; */
       text-align: center;
-      padding: 140px 80px;
+      padding: 140px 80px 180px 80px;
       color: white;
       background: -webkit-linear-gradient(#292f50, #6264dd);
       background:    -moz-linear-gradient(#292f50, #6264dd);
